[tool.poetry]
name = "autopeer"
version = "0.1.0"
description = ""
authors = ["Lukas Martini <hello@lutoma.org>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.2"
requests = "2.27.1"
paramiko = "2.9.2"
rrdtool = "0.1.11"
"hurry.filesize" = "0.9"
python-dateutil = "2.6.1"
django-bootstrap-v5 = "^1.0.8"
pystmark = { git = "https://github.com/xsleonard/pystmark.git", rev = "300710d48c8f5078071fb9586c9af73837bd6230" }
PyJWT = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
